[gd_scene load_steps=2 format=3 uid="uid://c33t2nvl25e1u"]

[ext_resource type="Script" path="res://Scripts/Characters/Nose/nose.gd" id="1_onyl2"]

[node name="Nose" type="Area2D" groups=["nose"]]
collision_layer = 8
collision_mask = 8
script = ExtResource("1_onyl2")

[node name="SneezeTriggerTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.1
autostart = true

[node name="TickleDecayTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="BurnDecayTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true
